# qs

./: .gitignore  LICENSE  README.md  SUB_PROJECT_GUIDE.md  cmake.go  go.mod  main.go  project.go
test/test-bin/: CMakeLists.txt  main.cpp
test/test-cpp17/: CMakeLists.txt
test/test-cpp20/: CMakeLists.txt
test/test-final/: CMakeLists.txt  hello.cpp
test/test-glob/: CMakeLists.txt  extra.cpp
test/test-glob/include/: utils.hpp
test/test-glob/src/: main.cpp  utils.cpp
test/test-project/: CMakeLists.txt  hello.cpp
